# valvra

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
artifacts/: console_external_dataset_template.json  console_fit_dataset_v1.npz  console_fitted_profile_v1.json  cv_external_dataset_template.json  cv_fit_dataset_v1.npz  cv_fitted_profile_v1.json  external_refit_pipeline_summary.json  external_refit_pipeline_summary_ci.json  feel_verify_summary.json  fit_verify_summary.json  hifi_external_dataset_template.json  hifi_fit_dataset_v1.npz  hifi_fitted_profile_v1.json  rndi_external_dataset_template.json  rndi_fit_dataset_v1.npz  rndi_fitted_profile_v1.json  v72_external_dataset_template.json  v72_fit_dataset_v1.npz  v72_fitted_profile_v1.json
artifacts/external_ci/: console_external_capture_v1.npz  rndi_external_capture_v1.npz
bench/: CMakeLists.txt  valvra_bench.cpp
docs/: 00-README.md  01-vacuum-tube-physics.md  02-transformer-physics-and-distortion.md  03-time-varying-nonlinearities.md  04-circuit-interactions-and-impedance.md  05-harmonic-spectrum-and-psychoacoustics.md  06-stochastic-component-modeling.md  07-implementation-strategies.md  08-competitive-analysis.md  09-measurement-and-validation.md  10-glossary-and-references.md  11-target-hardware-catalog.md  12-analog-beyond-tubes.md  13-mastering-features.md  14-missing-circuit-topologies.md  15-use-case-guide.md  16-ui-ux-spec.md  17-legal-and-licensing.md  18-measurement-infrastructure.md  19-risk-analysis.md  20-mvp-scope-decision.md  21-pultec-measurement-archive.md  22-academic-quantitative-data.md  23-noncommercial-redirect.md  24-tube-amp-target-hardware.md  25-docs-intent-bugfix-log-2026-04-23.md  26-implementation-gap-audit-2026-04-26.md  27-bench-baseline-2026-04-27.md  28-user-manual-ko.md  29-user-manual-en.md  30-neural-training-playbook.md  32-practical-readiness-2026-05-15.md  33-analog-physics-overhaul-2026-06-12.md  34-analog-physics-gap-audit-2026-07-03.md  35-progress-audit-and-strategy-2026-07-18.md  36-bench-2026-07-19.md  37-listening-checklist-2026-07-20.md
scripts/: audit_checks.py  hardware_fit_v72.py  install_macos.sh  practical_readiness_report.py  preset_harmonic_report.py  run_bench.sh  run_external_refit_pipeline.py  train_neural_residual.py  validate_harmonics.py
src/cli/: CMakeLists.txt  valvra_process.cpp
src/dsp/: CMakeLists.txt  CathodeBounce.cpp  CathodeBounce.h  ComponentVariation.cpp  ComponentVariation.h  ExpansionRack.h  JilesAtherton.cpp  JilesAtherton.h  KorenPentode.cpp  KorenPentode.h  KorenTriode.cpp  KorenTriode.h  NeuralResidualLayer.h  PolyphaseOversampler.h  PowerSupplySag.cpp  PowerSupplySag.h  PushPullStage.h  TransformerStage.h  TruePeakLimiter.h  TubeAmpChain.h  TubeStage.h
src/plugin/: CMakeLists.txt  FactoryPresets.h  HarmonicAnalyzer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SignatureViews.h
tests/: CMakeLists.txt  golden_render_reference.h  test_cathode_bounce.cpp  test_cli_regression.cpp  test_component_variation.cpp  test_compound_topologies.cpp  test_expansion_rack.cpp  test_golden_render.cpp  test_jiles_atherton.cpp  test_koren_pentode.cpp  test_koren_triode.cpp  test_plugin_processor_mono.cpp  test_polyphase_oversampler.cpp  test_power_supply_sag.cpp  test_push_pull_stage.cpp  test_true_peak_limiter.cpp  test_tube_amp_chain.cpp  test_tube_stage.cpp
